objects/zkusps__CustomAddressSource__c.object
<CustomObject>
    <customHelpPage>zkusps__CustomAddressSourceHelp</customHelpPage>
    <fields>
        <fullName>zkusps__AMDeliveryField__c</fullName>
        <label>AMDelivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__AdultSignatureField__c</fullName>
        <label>Adult Signature Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__AdultSignatureRestrictedDeliveryField__c</fullName>
        <label>Adult Sign Restricted Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__AutoCreateShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__AutoPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__BpodClientDUNSNumberField__c</fullName>
        <label>Bpod Client DUNS Number Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CertifiedMailField__c</fullName>
        <label>Certified Mail Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DefaultMailPieceField__c</fullName>
        <label>Default Mail Piece Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DeliveryConfirmationField__c</fullName>
        <label>Delivery Confirmation Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__DomesticMailClassField__c</fullName>
        <label>Domestic Mail Class Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ElectronicReturnReceiptField__c</fullName>
        <label>Electronic Return Receipt Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__HeightField__c</fullName>
        <label>Height Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__HideSenderAddressField__c</fullName>
        <label>Hide Sender Address Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__InsuredMailField__c</fullName>
        <label>Insured Mail Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__InsuredTypeField__c</fullName>
        <label>Insured Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__InternationalMailClassField__c</fullName>
        <label>International Mail Class Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageSizeField__c</fullName>
        <label>Label Image Size Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LabelImageTypeField__c</fullName>
        <label>Label Image Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LengthField__c</fullName>
        <label>Length Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LiveAnimalSurchargeField__c</fullName>
        <label>Live Animal Surcharge Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__NoDeliveryOnSaturdaysField__c</fullName>
        <label>No Delivery On Saturdays Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__OutputEstimateDeliveryDateField__c</fullName>
        <label>Output Estimate Delivery Date Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__OutputFeesField__c</fullName>
        <label>Output Fees Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__OutputPostageTotalAmountField__c</fullName>
        <label>Output Postage Total Amount Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__OutputTotalAmountField__c</fullName>
        <label>Output Total Amount Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RegisteredMailField__c</fullName>
        <label>Registered Mail Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RegisteredMailValueField__c</fullName>
        <label>Registered Mail Value Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__RestrictedDeliveryField__c</fullName>
        <label>Restricted Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ReturnReceiptField__c</fullName>
        <label>Return Receipt Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderCityField__c</fullName>
        <label>Sender City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderCompanyNameField__c</fullName>
        <label>Sender Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderCountryField__c</fullName>
        <label>Sender Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderEmailField__c</fullName>
        <label>Sender Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderNameField__c</fullName>
        <label>Sender Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderPhoneField__c</fullName>
        <label>Sender Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderPostalCodeField__c</fullName>
        <label>Sender Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStateField__c</fullName>
        <label>Sender State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStreet1TextLineField__c</fullName>
        <label>Sender Street1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStreet2TextLineField__c</fullName>
        <label>Sender Street2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStreet3TextLineField__c</fullName>
        <label>Sender Street3 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SenderStreetTextAreaField__c</fullName>
        <label>Sender Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ShipmatePreferenceField__c</fullName>
        <label>Shipmate Preference Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ShipmentTypeField__c</fullName>
        <label>Shipment Type Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SignatureConfirmationField__c</fullName>
        <label>Signature Confirmation Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SignatureWaiverField__c</fullName>
        <label>Signature Waiver Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SpecialContentsField__c</fullName>
        <label>Special Contents Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__Street3TextLineField__c</fullName>
        <label>Street 3 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__SundayHolidayDeliveryField__c</fullName>
        <label>Sunday Holiday Delivery Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ValueOfContentsField__c</fullName>
        <label>Value Of Contents Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightOuncesField__c</fullName>
        <label>Weight Ounces Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__WeightPoundsField__c</fullName>
        <label>Weight Pounds Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__WidthField__c</fullName>
        <label>Width Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__cityField__c</fullName>
        <label>City Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__companyNameField__c</fullName>
        <label>Company Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__countryField__c</fullName>
        <label>Country Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__customAddressSourceObject__c</fullName>
        <label>Custom Address Source Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__emailField__c</fullName>
        <label>Email Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__nameField__c</fullName>
        <label>Name Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__phoneField__c</fullName>
        <label>Phone Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__postalCodeField__c</fullName>
        <label>Postal Code Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shipmentObjectLookupField__c</fullName>
        <label>Shipment Object Lookup Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__stateField__c</fullName>
        <label>State Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__street1TextLineField__c</fullName>
        <label>Street 1 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__street2TextLineField__c</fullName>
        <label>Street 2 Text Line Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__streetTextAreaField__c</fullName>
        <label>Street Text Area Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference1Field__c</fullName>
        <label>Your Reference 1 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference2Field__c</fullName>
        <label>Your Reference 2 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__yourReference3Field__c</fullName>
        <label>Your Reference 3 Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Custom Address Source</label>
    <listViews>
        <fullName>Nolan_Daigle_CustomAddressSource1</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Custom Address Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Address Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>